iptables.temp.save
# Generated by iptables-save v1.4.21 on Wed Nov 18 12:35:56 2015
*mangle
:PREROUTING ACCEPT [2:104]
:INPUT ACCEPT [1:52]
:FORWARD ACCEPT [1:52]
:OUTPUT ACCEPT [1:152]
:POSTROUTING ACCEPT [2:204]
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -s 10.1.2.2/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x34/0xffffffff
-A FORWARD -s 10.1.2.2/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x34/0xffffffff
-A FORWARD -s 10.1.2.3/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x35/0xffffffff
-A FORWARD -s 10.1.2.3/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x35/0xffffffff
-A FORWARD -s 10.1.2.4/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x36/0xffffffff
-A FORWARD -s 10.1.2.4/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x36/0xffffffff
-A FORWARD -s 10.1.2.5/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x37/0xffffffff
-A FORWARD -s 10.1.2.5/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x37/0xffffffff
-A FORWARD -s 10.1.2.6/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x38/0xffffffff
-A FORWARD -s 10.1.2.6/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x38/0xffffffff
-A FORWARD -s 10.1.2.7/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x39/0xffffffff
-A FORWARD -s 10.1.2.7/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x39/0xffffffff
-A FORWARD -s 10.1.2.8/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x3a/0xffffffff
-A FORWARD -s 10.1.2.8/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x3a/0xffffffff
-A FORWARD -s 10.1.2.9/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x3b/0xffffffff
-A FORWARD -s 10.1.2.9/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x3b/0xffffffff
-A FORWARD -s 10.1.2.10/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1fe/0xffffffff
-A FORWARD -s 10.1.2.10/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1fe/0xffffffff
-A FORWARD -s 10.1.2.11/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1ff/0xffffffff
-A FORWARD -s 10.1.2.11/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1ff/0xffffffff
-A FORWARD -s 10.1.2.12/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x200/0xffffffff
-A FORWARD -s 10.1.2.12/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x200/0xffffffff
-A FORWARD -s 10.1.2.13/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x201/0xffffffff
-A FORWARD -s 10.1.2.13/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x201/0xffffffff
-A FORWARD -s 10.1.2.14/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x202/0xffffffff
-A FORWARD -s 10.1.2.14/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x202/0xffffffff
-A FORWARD -s 10.1.2.15/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x203/0xffffffff
-A FORWARD -s 10.1.2.15/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x203/0xffffffff
-A FORWARD -s 10.1.2.16/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x204/0xffffffff
-A FORWARD -s 10.1.2.16/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x204/0xffffffff
-A FORWARD -s 10.1.2.17/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x205/0xffffffff
-A FORWARD -s 10.1.2.17/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x205/0xffffffff
-A FORWARD -s 10.1.2.18/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x206/0xffffffff
-A FORWARD -s 10.1.2.18/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x206/0xffffffff
-A FORWARD -s 10.1.2.19/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x207/0xffffffff
-A FORWARD -s 10.1.2.19/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x207/0xffffffff
-A FORWARD -s 10.1.2.20/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x208/0xffffffff
-A FORWARD -s 10.1.2.20/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x208/0xffffffff
-A FORWARD -s 10.1.2.21/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x209/0xffffffff
-A FORWARD -s 10.1.2.21/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x209/0xffffffff
-A FORWARD -s 10.1.2.22/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20a/0xffffffff
-A FORWARD -s 10.1.2.22/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20a/0xffffffff
-A FORWARD -s 10.1.2.23/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20b/0xffffffff
-A FORWARD -s 10.1.2.23/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20b/0xffffffff
-A FORWARD -s 10.1.2.24/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20c/0xffffffff
-A FORWARD -s 10.1.2.24/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20c/0xffffffff
-A FORWARD -s 10.1.2.25/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20d/0xffffffff
-A FORWARD -s 10.1.2.25/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20d/0xffffffff
-A FORWARD -s 10.1.2.26/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20e/0xffffffff
-A FORWARD -s 10.1.2.26/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20e/0xffffffff
-A FORWARD -s 10.1.2.27/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20f/0xffffffff
-A FORWARD -s 10.1.2.27/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x20f/0xffffffff
-A FORWARD -s 10.1.2.28/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x210/0xffffffff
-A FORWARD -s 10.1.2.28/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x210/0xffffffff
-A FORWARD -s 10.1.2.29/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x211/0xffffffff
-A FORWARD -s 10.1.2.29/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x211/0xffffffff
-A FORWARD -s 10.1.2.30/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x212/0xffffffff
-A FORWARD -s 10.1.2.30/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x212/0xffffffff
-A FORWARD -s 10.1.2.31/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x213/0xffffffff
-A FORWARD -s 10.1.2.31/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x213/0xffffffff
-A FORWARD -s 10.1.2.32/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x214/0xffffffff
-A FORWARD -s 10.1.2.32/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x214/0xffffffff
-A FORWARD -s 10.1.2.33/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x215/0xffffffff
-A FORWARD -s 10.1.2.33/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x215/0xffffffff
-A FORWARD -s 10.1.2.34/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x216/0xffffffff
-A FORWARD -s 10.1.2.34/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x216/0xffffffff
-A FORWARD -s 10.1.2.35/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x217/0xffffffff
-A FORWARD -s 10.1.2.35/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x217/0xffffffff
-A FORWARD -s 10.1.2.36/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x218/0xffffffff
-A FORWARD -s 10.1.2.36/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x218/0xffffffff
-A FORWARD -s 10.1.2.37/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x219/0xffffffff
-A FORWARD -s 10.1.2.37/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x219/0xffffffff
-A FORWARD -s 10.1.2.38/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21a/0xffffffff
-A FORWARD -s 10.1.2.38/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21a/0xffffffff
-A FORWARD -s 10.1.2.39/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21b/0xffffffff
-A FORWARD -s 10.1.2.39/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21b/0xffffffff
-A FORWARD -s 10.1.2.40/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21c/0xffffffff
-A FORWARD -s 10.1.2.40/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21c/0xffffffff
-A FORWARD -s 10.1.2.41/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21d/0xffffffff
-A FORWARD -s 10.1.2.41/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21d/0xffffffff
-A FORWARD -s 10.1.2.42/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21e/0xffffffff
-A FORWARD -s 10.1.2.42/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21e/0xffffffff
-A FORWARD -s 10.1.2.43/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21f/0xffffffff
-A FORWARD -s 10.1.2.43/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x21f/0xffffffff
-A FORWARD -s 10.1.2.44/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x220/0xffffffff
-A FORWARD -s 10.1.2.44/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x220/0xffffffff
-A FORWARD -s 10.1.2.45/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x221/0xffffffff
-A FORWARD -s 10.1.2.45/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x221/0xffffffff
-A FORWARD -s 10.1.2.46/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x222/0xffffffff
-A FORWARD -s 10.1.2.46/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x222/0xffffffff
-A FORWARD -s 10.1.2.47/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x223/0xffffffff
-A FORWARD -s 10.1.2.47/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x223/0xffffffff
-A FORWARD -s 10.1.2.48/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x224/0xffffffff
-A FORWARD -s 10.1.2.48/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x224/0xffffffff
-A FORWARD -s 10.1.2.49/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x225/0xffffffff
-A FORWARD -s 10.1.2.49/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x225/0xffffffff
-A FORWARD -s 10.1.2.50/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x226/0xffffffff
-A FORWARD -s 10.1.2.50/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x226/0xffffffff
-A FORWARD -s 10.1.2.51/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x227/0xffffffff
-A FORWARD -s 10.1.2.51/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x227/0xffffffff
-A FORWARD -s 10.1.2.52/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x228/0xffffffff
-A FORWARD -s 10.1.2.52/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x228/0xffffffff
-A FORWARD -s 10.1.2.53/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x229/0xffffffff
-A FORWARD -s 10.1.2.53/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x229/0xffffffff
-A FORWARD -s 10.1.2.54/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22a/0xffffffff
-A FORWARD -s 10.1.2.54/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22a/0xffffffff
-A FORWARD -s 10.1.2.55/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22b/0xffffffff
-A FORWARD -s 10.1.2.55/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22b/0xffffffff
-A FORWARD -s 10.1.2.56/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22c/0xffffffff
-A FORWARD -s 10.1.2.56/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22c/0xffffffff
-A FORWARD -s 10.1.2.57/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22d/0xffffffff
-A FORWARD -s 10.1.2.57/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22d/0xffffffff
-A FORWARD -s 10.1.2.58/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22e/0xffffffff
-A FORWARD -s 10.1.2.58/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22e/0xffffffff
-A FORWARD -s 10.1.2.59/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22f/0xffffffff
-A FORWARD -s 10.1.2.59/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x22f/0xffffffff
-A FORWARD -s 10.1.2.60/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x230/0xffffffff
-A FORWARD -s 10.1.2.60/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x230/0xffffffff
-A FORWARD -s 10.1.2.61/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x231/0xffffffff
-A FORWARD -s 10.1.2.61/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x231/0xffffffff
-A FORWARD -s 10.1.2.62/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x232/0xffffffff
-A FORWARD -s 10.1.2.62/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x232/0xffffffff
-A FORWARD -s 10.1.2.63/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x233/0xffffffff
-A FORWARD -s 10.1.2.63/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x233/0xffffffff
-A FORWARD -s 10.1.2.64/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x234/0xffffffff
-A FORWARD -s 10.1.2.64/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x234/0xffffffff
-A FORWARD -s 10.1.2.65/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x235/0xffffffff
-A FORWARD -s 10.1.2.65/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x235/0xffffffff
-A FORWARD -s 10.1.2.66/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x236/0xffffffff
-A FORWARD -s 10.1.2.66/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x236/0xffffffff
-A FORWARD -s 10.1.2.67/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x237/0xffffffff
-A FORWARD -s 10.1.2.67/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x237/0xffffffff
-A FORWARD -s 10.1.2.68/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x238/0xffffffff
-A FORWARD -s 10.1.2.68/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x238/0xffffffff
-A FORWARD -s 10.1.2.69/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x239/0xffffffff
-A FORWARD -s 10.1.2.69/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x239/0xffffffff
-A FORWARD -s 10.1.2.70/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23a/0xffffffff
-A FORWARD -s 10.1.2.70/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23a/0xffffffff
-A FORWARD -s 10.1.2.71/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23b/0xffffffff
-A FORWARD -s 10.1.2.71/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23b/0xffffffff
-A FORWARD -s 10.1.2.72/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23c/0xffffffff
-A FORWARD -s 10.1.2.72/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23c/0xffffffff
-A FORWARD -s 10.1.2.73/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23d/0xffffffff
-A FORWARD -s 10.1.2.73/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23d/0xffffffff
-A FORWARD -s 10.1.2.74/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23e/0xffffffff
-A FORWARD -s 10.1.2.74/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23e/0xffffffff
-A FORWARD -s 10.1.2.75/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23f/0xffffffff
-A FORWARD -s 10.1.2.75/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x23f/0xffffffff
-A FORWARD -s 10.1.2.76/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x240/0xffffffff
-A FORWARD -s 10.1.2.76/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x240/0xffffffff
-A FORWARD -s 10.1.2.77/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x241/0xffffffff
-A FORWARD -s 10.1.2.77/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x241/0xffffffff
-A FORWARD -s 10.1.2.78/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x242/0xffffffff
-A FORWARD -s 10.1.2.78/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x242/0xffffffff
-A FORWARD -s 10.1.2.79/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x243/0xffffffff
-A FORWARD -s 10.1.2.79/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x243/0xffffffff
-A FORWARD -s 10.1.2.80/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x244/0xffffffff
-A FORWARD -s 10.1.2.80/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x244/0xffffffff
-A FORWARD -s 10.1.2.81/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x245/0xffffffff
-A FORWARD -s 10.1.2.81/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x245/0xffffffff
-A FORWARD -s 10.1.2.82/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x246/0xffffffff
-A FORWARD -s 10.1.2.82/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x246/0xffffffff
-A FORWARD -s 10.1.2.83/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x247/0xffffffff
-A FORWARD -s 10.1.2.83/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x247/0xffffffff
-A FORWARD -s 10.1.2.84/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x248/0xffffffff
-A FORWARD -s 10.1.2.84/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x248/0xffffffff
-A FORWARD -s 10.1.2.85/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x249/0xffffffff
-A FORWARD -s 10.1.2.85/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x249/0xffffffff
-A FORWARD -s 10.1.2.86/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24a/0xffffffff
-A FORWARD -s 10.1.2.86/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24a/0xffffffff
-A FORWARD -s 10.1.2.87/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24b/0xffffffff
-A FORWARD -s 10.1.2.87/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24b/0xffffffff
-A FORWARD -s 10.1.2.88/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24c/0xffffffff
-A FORWARD -s 10.1.2.88/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24c/0xffffffff
-A FORWARD -s 10.1.2.89/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24d/0xffffffff
-A FORWARD -s 10.1.2.89/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24d/0xffffffff
-A FORWARD -s 10.1.2.90/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24e/0xffffffff
-A FORWARD -s 10.1.2.90/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24e/0xffffffff
-A FORWARD -s 10.1.2.91/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24f/0xffffffff
-A FORWARD -s 10.1.2.91/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x24f/0xffffffff
-A FORWARD -s 10.1.2.92/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x250/0xffffffff
-A FORWARD -s 10.1.2.92/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x250/0xffffffff
-A FORWARD -s 10.1.2.93/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x251/0xffffffff
-A FORWARD -s 10.1.2.93/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x251/0xffffffff
-A FORWARD -s 10.1.2.94/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x252/0xffffffff
-A FORWARD -s 10.1.2.94/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x252/0xffffffff
-A FORWARD -s 10.1.2.95/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x253/0xffffffff
-A FORWARD -s 10.1.2.95/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x253/0xffffffff
-A FORWARD -s 10.1.2.96/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x254/0xffffffff
-A FORWARD -s 10.1.2.96/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x254/0xffffffff
-A FORWARD -s 10.1.2.97/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x255/0xffffffff
-A FORWARD -s 10.1.2.97/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x255/0xffffffff
-A FORWARD -s 10.1.2.98/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x256/0xffffffff
-A FORWARD -s 10.1.2.98/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x256/0xffffffff
-A FORWARD -s 10.1.2.99/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x257/0xffffffff
-A FORWARD -s 10.1.2.99/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x257/0xffffffff
-A FORWARD -s 10.1.2.100/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13ec/0xffffffff
-A FORWARD -s 10.1.2.100/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13ec/0xffffffff
-A FORWARD -s 10.1.2.101/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13ed/0xffffffff
-A FORWARD -s 10.1.2.101/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13ed/0xffffffff
-A FORWARD -s 10.1.2.102/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13ee/0xffffffff
-A FORWARD -s 10.1.2.102/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13ee/0xffffffff
-A FORWARD -s 10.1.2.103/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13ef/0xffffffff
-A FORWARD -s 10.1.2.103/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13ef/0xffffffff
-A FORWARD -s 10.1.2.104/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f0/0xffffffff
-A FORWARD -s 10.1.2.104/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f0/0xffffffff
-A FORWARD -s 10.1.2.105/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f1/0xffffffff
-A FORWARD -s 10.1.2.105/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f1/0xffffffff
-A FORWARD -s 10.1.2.106/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f2/0xffffffff
-A FORWARD -s 10.1.2.106/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f2/0xffffffff
-A FORWARD -s 10.1.2.107/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f3/0xffffffff
-A FORWARD -s 10.1.2.107/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f3/0xffffffff
-A FORWARD -s 10.1.2.108/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f4/0xffffffff
-A FORWARD -s 10.1.2.108/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f4/0xffffffff
-A FORWARD -s 10.1.2.109/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f5/0xffffffff
-A FORWARD -s 10.1.2.109/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f5/0xffffffff
-A FORWARD -s 10.1.2.110/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f6/0xffffffff
-A FORWARD -s 10.1.2.110/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f6/0xffffffff
-A FORWARD -s 10.1.2.111/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f7/0xffffffff
-A FORWARD -s 10.1.2.111/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f7/0xffffffff
-A FORWARD -s 10.1.2.112/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f8/0xffffffff
-A FORWARD -s 10.1.2.112/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f8/0xffffffff
-A FORWARD -s 10.1.2.113/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f9/0xffffffff
-A FORWARD -s 10.1.2.113/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13f9/0xffffffff
-A FORWARD -s 10.1.2.114/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13fa/0xffffffff
-A FORWARD -s 10.1.2.114/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13fa/0xffffffff
-A FORWARD -s 10.1.2.115/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13fb/0xffffffff
-A FORWARD -s 10.1.2.115/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13fb/0xffffffff
-A FORWARD -s 10.1.2.116/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13fc/0xffffffff
-A FORWARD -s 10.1.2.116/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13fc/0xffffffff
-A FORWARD -s 10.1.2.117/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13fd/0xffffffff
-A FORWARD -s 10.1.2.117/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13fd/0xffffffff
-A FORWARD -s 10.1.2.118/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13fe/0xffffffff
-A FORWARD -s 10.1.2.118/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13fe/0xffffffff
-A FORWARD -s 10.1.2.119/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13ff/0xffffffff
-A FORWARD -s 10.1.2.119/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x13ff/0xffffffff
-A FORWARD -s 10.1.2.120/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1400/0xffffffff
-A FORWARD -s 10.1.2.120/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1400/0xffffffff
-A FORWARD -s 10.1.2.121/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1401/0xffffffff
-A FORWARD -s 10.1.2.121/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1401/0xffffffff
-A FORWARD -s 10.1.2.122/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1402/0xffffffff
-A FORWARD -s 10.1.2.122/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1402/0xffffffff
-A FORWARD -s 10.1.2.123/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1403/0xffffffff
-A FORWARD -s 10.1.2.123/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1403/0xffffffff
-A FORWARD -s 10.1.2.124/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1404/0xffffffff
-A FORWARD -s 10.1.2.124/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1404/0xffffffff
-A FORWARD -s 10.1.2.125/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1405/0xffffffff
-A FORWARD -s 10.1.2.125/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1405/0xffffffff
-A FORWARD -s 10.1.2.126/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1406/0xffffffff
-A FORWARD -s 10.1.2.126/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1406/0xffffffff
-A FORWARD -s 10.1.2.127/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1407/0xffffffff
-A FORWARD -s 10.1.2.127/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1407/0xffffffff
-A FORWARD -s 10.1.2.128/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1408/0xffffffff
-A FORWARD -s 10.1.2.128/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1408/0xffffffff
-A FORWARD -s 10.1.2.129/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1409/0xffffffff
-A FORWARD -s 10.1.2.129/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1409/0xffffffff
-A FORWARD -s 10.1.2.130/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140a/0xffffffff
-A FORWARD -s 10.1.2.130/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140a/0xffffffff
-A FORWARD -s 10.1.2.131/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140b/0xffffffff
-A FORWARD -s 10.1.2.131/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140b/0xffffffff
-A FORWARD -s 10.1.2.132/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140c/0xffffffff
-A FORWARD -s 10.1.2.132/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140c/0xffffffff
-A FORWARD -s 10.1.2.133/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140d/0xffffffff
-A FORWARD -s 10.1.2.133/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140d/0xffffffff
-A FORWARD -s 10.1.2.134/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140e/0xffffffff
-A FORWARD -s 10.1.2.134/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140e/0xffffffff
-A FORWARD -s 10.1.2.135/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140f/0xffffffff
-A FORWARD -s 10.1.2.135/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x140f/0xffffffff
-A FORWARD -s 10.1.2.136/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1410/0xffffffff
-A FORWARD -s 10.1.2.136/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1410/0xffffffff
-A FORWARD -s 10.1.2.137/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1411/0xffffffff
-A FORWARD -s 10.1.2.137/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1411/0xffffffff
-A FORWARD -s 10.1.2.138/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1412/0xffffffff
-A FORWARD -s 10.1.2.138/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1412/0xffffffff
-A FORWARD -s 10.1.2.139/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1413/0xffffffff
-A FORWARD -s 10.1.2.139/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1413/0xffffffff
-A FORWARD -s 10.1.2.140/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1414/0xffffffff
-A FORWARD -s 10.1.2.140/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1414/0xffffffff
-A FORWARD -s 10.1.2.141/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1415/0xffffffff
-A FORWARD -s 10.1.2.141/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1415/0xffffffff
-A FORWARD -s 10.1.2.142/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1416/0xffffffff
-A FORWARD -s 10.1.2.142/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1416/0xffffffff
-A FORWARD -s 10.1.2.143/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1417/0xffffffff
-A FORWARD -s 10.1.2.143/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1417/0xffffffff
-A FORWARD -s 10.1.2.144/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1418/0xffffffff
-A FORWARD -s 10.1.2.144/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1418/0xffffffff
-A FORWARD -s 10.1.2.145/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1419/0xffffffff
-A FORWARD -s 10.1.2.145/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1419/0xffffffff
-A FORWARD -s 10.1.2.146/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141a/0xffffffff
-A FORWARD -s 10.1.2.146/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141a/0xffffffff
-A FORWARD -s 10.1.2.147/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141b/0xffffffff
-A FORWARD -s 10.1.2.147/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141b/0xffffffff
-A FORWARD -s 10.1.2.148/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141c/0xffffffff
-A FORWARD -s 10.1.2.148/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141c/0xffffffff
-A FORWARD -s 10.1.2.149/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141d/0xffffffff
-A FORWARD -s 10.1.2.149/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141d/0xffffffff
-A FORWARD -s 10.1.2.150/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141e/0xffffffff
-A FORWARD -s 10.1.2.150/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141e/0xffffffff
-A FORWARD -s 10.1.2.151/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141f/0xffffffff
-A FORWARD -s 10.1.2.151/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x141f/0xffffffff
-A FORWARD -s 10.1.2.152/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1420/0xffffffff
-A FORWARD -s 10.1.2.152/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1420/0xffffffff
-A FORWARD -s 10.1.2.153/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1421/0xffffffff
-A FORWARD -s 10.1.2.153/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1421/0xffffffff
-A FORWARD -s 10.1.2.154/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1422/0xffffffff
-A FORWARD -s 10.1.2.154/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1422/0xffffffff
-A FORWARD -s 10.1.2.155/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1423/0xffffffff
-A FORWARD -s 10.1.2.155/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1423/0xffffffff
-A FORWARD -s 10.1.2.156/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1424/0xffffffff
-A FORWARD -s 10.1.2.156/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1424/0xffffffff
-A FORWARD -s 10.1.2.157/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1425/0xffffffff
-A FORWARD -s 10.1.2.157/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1425/0xffffffff
-A FORWARD -s 10.1.2.158/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1426/0xffffffff
-A FORWARD -s 10.1.2.158/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1426/0xffffffff
-A FORWARD -s 10.1.2.159/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1427/0xffffffff
-A FORWARD -s 10.1.2.159/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1427/0xffffffff
-A FORWARD -s 10.1.2.160/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1428/0xffffffff
-A FORWARD -s 10.1.2.160/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1428/0xffffffff
-A FORWARD -s 10.1.2.161/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1429/0xffffffff
-A FORWARD -s 10.1.2.161/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1429/0xffffffff
-A FORWARD -s 10.1.2.162/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142a/0xffffffff
-A FORWARD -s 10.1.2.162/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142a/0xffffffff
-A FORWARD -s 10.1.2.163/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142b/0xffffffff
-A FORWARD -s 10.1.2.163/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142b/0xffffffff
-A FORWARD -s 10.1.2.164/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142c/0xffffffff
-A FORWARD -s 10.1.2.164/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142c/0xffffffff
-A FORWARD -s 10.1.2.165/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142d/0xffffffff
-A FORWARD -s 10.1.2.165/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142d/0xffffffff
-A FORWARD -s 10.1.2.166/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142e/0xffffffff
-A FORWARD -s 10.1.2.166/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142e/0xffffffff
-A FORWARD -s 10.1.2.167/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142f/0xffffffff
-A FORWARD -s 10.1.2.167/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x142f/0xffffffff
-A FORWARD -s 10.1.2.168/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1430/0xffffffff
-A FORWARD -s 10.1.2.168/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1430/0xffffffff
-A FORWARD -s 10.1.2.169/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1431/0xffffffff
-A FORWARD -s 10.1.2.169/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1431/0xffffffff
-A FORWARD -s 10.1.2.170/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1432/0xffffffff
-A FORWARD -s 10.1.2.170/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1432/0xffffffff
-A FORWARD -s 10.1.2.171/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1433/0xffffffff
-A FORWARD -s 10.1.2.171/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1433/0xffffffff
-A FORWARD -s 10.1.2.172/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1434/0xffffffff
-A FORWARD -s 10.1.2.172/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1434/0xffffffff
-A FORWARD -s 10.1.2.173/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1435/0xffffffff
-A FORWARD -s 10.1.2.173/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1435/0xffffffff
-A FORWARD -s 10.1.2.174/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1436/0xffffffff
-A FORWARD -s 10.1.2.174/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1436/0xffffffff
-A FORWARD -s 10.1.2.175/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1437/0xffffffff
-A FORWARD -s 10.1.2.175/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1437/0xffffffff
-A FORWARD -s 10.1.2.176/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1438/0xffffffff
-A FORWARD -s 10.1.2.176/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1438/0xffffffff
-A FORWARD -s 10.1.2.177/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1439/0xffffffff
-A FORWARD -s 10.1.2.177/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1439/0xffffffff
-A FORWARD -s 10.1.2.178/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143a/0xffffffff
-A FORWARD -s 10.1.2.178/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143a/0xffffffff
-A FORWARD -s 10.1.2.179/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143b/0xffffffff
-A FORWARD -s 10.1.2.179/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143b/0xffffffff
-A FORWARD -s 10.1.2.180/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143c/0xffffffff
-A FORWARD -s 10.1.2.180/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143c/0xffffffff
-A FORWARD -s 10.1.2.181/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143d/0xffffffff
-A FORWARD -s 10.1.2.181/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143d/0xffffffff
-A FORWARD -s 10.1.2.182/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143e/0xffffffff
-A FORWARD -s 10.1.2.182/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143e/0xffffffff
-A FORWARD -s 10.1.2.183/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143f/0xffffffff
-A FORWARD -s 10.1.2.183/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x143f/0xffffffff
-A FORWARD -s 10.1.2.184/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1440/0xffffffff
-A FORWARD -s 10.1.2.184/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1440/0xffffffff
-A FORWARD -s 10.1.2.185/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1441/0xffffffff
-A FORWARD -s 10.1.2.185/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1441/0xffffffff
-A FORWARD -s 10.1.2.186/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1442/0xffffffff
-A FORWARD -s 10.1.2.186/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1442/0xffffffff
-A FORWARD -s 10.1.2.187/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1443/0xffffffff
-A FORWARD -s 10.1.2.187/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1443/0xffffffff
-A FORWARD -s 10.1.2.188/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1444/0xffffffff
-A FORWARD -s 10.1.2.188/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1444/0xffffffff
-A FORWARD -s 10.1.2.189/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1445/0xffffffff
-A FORWARD -s 10.1.2.189/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1445/0xffffffff
-A FORWARD -s 10.1.2.190/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1446/0xffffffff
-A FORWARD -s 10.1.2.190/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1446/0xffffffff
-A FORWARD -s 10.1.2.191/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1447/0xffffffff
-A FORWARD -s 10.1.2.191/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1447/0xffffffff
-A FORWARD -s 10.1.2.192/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1448/0xffffffff
-A FORWARD -s 10.1.2.192/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1448/0xffffffff
-A FORWARD -s 10.1.2.193/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1449/0xffffffff
-A FORWARD -s 10.1.2.193/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1449/0xffffffff
-A FORWARD -s 10.1.2.194/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144a/0xffffffff
-A FORWARD -s 10.1.2.194/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144a/0xffffffff
-A FORWARD -s 10.1.2.195/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144b/0xffffffff
-A FORWARD -s 10.1.2.195/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144b/0xffffffff
-A FORWARD -s 10.1.2.196/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144c/0xffffffff
-A FORWARD -s 10.1.2.196/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144c/0xffffffff
-A FORWARD -s 10.1.2.197/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144d/0xffffffff
-A FORWARD -s 10.1.2.197/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144d/0xffffffff
-A FORWARD -s 10.1.2.198/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144e/0xffffffff
-A FORWARD -s 10.1.2.198/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144e/0xffffffff
-A FORWARD -s 10.1.2.199/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144f/0xffffffff
-A FORWARD -s 10.1.2.199/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x144f/0xffffffff
-A FORWARD -s 10.1.2.200/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1450/0xffffffff
-A FORWARD -s 10.1.2.200/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1450/0xffffffff
-A FORWARD -s 10.1.2.201/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1451/0xffffffff
-A FORWARD -s 10.1.2.201/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1451/0xffffffff
-A FORWARD -s 10.1.2.202/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1452/0xffffffff
-A FORWARD -s 10.1.2.202/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1452/0xffffffff
-A FORWARD -s 10.1.2.203/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1453/0xffffffff
-A FORWARD -s 10.1.2.203/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1453/0xffffffff
-A FORWARD -s 10.1.2.204/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1454/0xffffffff
-A FORWARD -s 10.1.2.204/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1454/0xffffffff
-A FORWARD -s 10.1.2.205/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1455/0xffffffff
-A FORWARD -s 10.1.2.205/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1455/0xffffffff
-A FORWARD -s 10.1.2.206/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1456/0xffffffff
-A FORWARD -s 10.1.2.206/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1456/0xffffffff
-A FORWARD -s 10.1.2.207/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1457/0xffffffff
-A FORWARD -s 10.1.2.207/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1457/0xffffffff
-A FORWARD -s 10.1.2.208/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1458/0xffffffff
-A FORWARD -s 10.1.2.208/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1458/0xffffffff
-A FORWARD -s 10.1.2.209/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1459/0xffffffff
-A FORWARD -s 10.1.2.209/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1459/0xffffffff
-A FORWARD -s 10.1.2.210/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145a/0xffffffff
-A FORWARD -s 10.1.2.210/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145a/0xffffffff
-A FORWARD -s 10.1.2.211/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145b/0xffffffff
-A FORWARD -s 10.1.2.211/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145b/0xffffffff
-A FORWARD -s 10.1.2.212/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145c/0xffffffff
-A FORWARD -s 10.1.2.212/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145c/0xffffffff
-A FORWARD -s 10.1.2.213/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145d/0xffffffff
-A FORWARD -s 10.1.2.213/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145d/0xffffffff
-A FORWARD -s 10.1.2.214/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145e/0xffffffff
-A FORWARD -s 10.1.2.214/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145e/0xffffffff
-A FORWARD -s 10.1.2.215/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145f/0xffffffff
-A FORWARD -s 10.1.2.215/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x145f/0xffffffff
-A FORWARD -s 10.1.2.216/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1460/0xffffffff
-A FORWARD -s 10.1.2.216/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1460/0xffffffff
-A FORWARD -s 10.1.2.217/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1461/0xffffffff
-A FORWARD -s 10.1.2.217/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1461/0xffffffff
-A FORWARD -s 10.1.2.218/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1462/0xffffffff
-A FORWARD -s 10.1.2.218/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1462/0xffffffff
-A FORWARD -s 10.1.2.219/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1463/0xffffffff
-A FORWARD -s 10.1.2.219/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1463/0xffffffff
-A FORWARD -s 10.1.2.220/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1464/0xffffffff
-A FORWARD -s 10.1.2.220/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1464/0xffffffff
-A FORWARD -s 10.1.2.221/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1465/0xffffffff
-A FORWARD -s 10.1.2.221/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1465/0xffffffff
-A FORWARD -s 10.1.2.222/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1466/0xffffffff
-A FORWARD -s 10.1.2.222/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1466/0xffffffff
-A FORWARD -s 10.1.2.223/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1467/0xffffffff
-A FORWARD -s 10.1.2.223/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1467/0xffffffff
-A FORWARD -s 10.1.2.224/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1468/0xffffffff
-A FORWARD -s 10.1.2.224/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1468/0xffffffff
-A FORWARD -s 10.1.2.225/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1469/0xffffffff
-A FORWARD -s 10.1.2.225/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1469/0xffffffff
-A FORWARD -s 10.1.2.226/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146a/0xffffffff
-A FORWARD -s 10.1.2.226/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146a/0xffffffff
-A FORWARD -s 10.1.2.227/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146b/0xffffffff
-A FORWARD -s 10.1.2.227/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146b/0xffffffff
-A FORWARD -s 10.1.2.228/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146c/0xffffffff
-A FORWARD -s 10.1.2.228/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146c/0xffffffff
-A FORWARD -s 10.1.2.229/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146d/0xffffffff
-A FORWARD -s 10.1.2.229/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146d/0xffffffff
-A FORWARD -s 10.1.2.230/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146e/0xffffffff
-A FORWARD -s 10.1.2.230/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146e/0xffffffff
-A FORWARD -s 10.1.2.231/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146f/0xffffffff
-A FORWARD -s 10.1.2.231/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x146f/0xffffffff
-A FORWARD -s 10.1.2.232/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1470/0xffffffff
-A FORWARD -s 10.1.2.232/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1470/0xffffffff
-A FORWARD -s 10.1.2.233/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1471/0xffffffff
-A FORWARD -s 10.1.2.233/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1471/0xffffffff
-A FORWARD -s 10.1.2.234/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1472/0xffffffff
-A FORWARD -s 10.1.2.234/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1472/0xffffffff
-A FORWARD -s 10.1.2.235/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1473/0xffffffff
-A FORWARD -s 10.1.2.235/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1473/0xffffffff
-A FORWARD -s 10.1.2.236/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1474/0xffffffff
-A FORWARD -s 10.1.2.236/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1474/0xffffffff
-A FORWARD -s 10.1.2.237/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1475/0xffffffff
-A FORWARD -s 10.1.2.237/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1475/0xffffffff
-A FORWARD -s 10.1.2.238/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1476/0xffffffff
-A FORWARD -s 10.1.2.238/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1476/0xffffffff
-A FORWARD -s 10.1.2.239/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1477/0xffffffff
-A FORWARD -s 10.1.2.239/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1477/0xffffffff
-A FORWARD -s 10.1.2.240/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1478/0xffffffff
-A FORWARD -s 10.1.2.240/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1478/0xffffffff
-A FORWARD -s 10.1.2.241/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1479/0xffffffff
-A FORWARD -s 10.1.2.241/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1479/0xffffffff
-A FORWARD -s 10.1.2.242/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147a/0xffffffff
-A FORWARD -s 10.1.2.242/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147a/0xffffffff
-A FORWARD -s 10.1.2.243/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147b/0xffffffff
-A FORWARD -s 10.1.2.243/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147b/0xffffffff
-A FORWARD -s 10.1.2.244/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147c/0xffffffff
-A FORWARD -s 10.1.2.244/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147c/0xffffffff
-A FORWARD -s 10.1.2.245/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147d/0xffffffff
-A FORWARD -s 10.1.2.245/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147d/0xffffffff
-A FORWARD -s 10.1.2.246/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147e/0xffffffff
-A FORWARD -s 10.1.2.246/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147e/0xffffffff
-A FORWARD -s 10.1.2.247/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147f/0xffffffff
-A FORWARD -s 10.1.2.247/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x147f/0xffffffff
-A FORWARD -s 10.1.2.248/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1480/0xffffffff
-A FORWARD -s 10.1.2.248/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1480/0xffffffff
-A FORWARD -s 10.1.2.249/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1481/0xffffffff
-A FORWARD -s 10.1.2.249/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1481/0xffffffff
-A FORWARD -s 10.1.2.250/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1482/0xffffffff
-A FORWARD -s 10.1.2.250/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1482/0xffffffff
-A FORWARD -s 10.1.2.251/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1483/0xffffffff
-A FORWARD -s 10.1.2.251/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1483/0xffffffff
-A FORWARD -s 10.1.2.252/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1484/0xffffffff
-A FORWARD -s 10.1.2.252/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1484/0xffffffff
-A FORWARD -s 10.1.2.253/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1485/0xffffffff
-A FORWARD -s 10.1.2.253/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1485/0xffffffff
-A FORWARD -s 10.1.2.254/32 -p tcp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1486/0xffffffff
-A FORWARD -s 10.1.2.254/32 -p udp -m multiport ! --dports 49152:65534 -j MARK --set-xmark 0x1486/0xffffffff
-A FORWARD -s 10.1.2.0/24 -p tcp -m multiport --dports 49152:65534 -j MARK --set-xmark 0x5/0xffffffff
-A FORWARD -s 10.1.2.0/24 -p udp -m multiport --dports 49152:65534 -j MARK --set-xmark 0x5/0xffffffff
-A POSTROUTING -d 10.1.2.2/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x34/0xffffffff
-A POSTROUTING -d 10.1.2.2/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x34/0xffffffff
-A POSTROUTING -d 10.1.2.3/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x35/0xffffffff
-A POSTROUTING -d 10.1.2.3/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x35/0xffffffff
-A POSTROUTING -d 10.1.2.4/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x36/0xffffffff
-A POSTROUTING -d 10.1.2.4/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x36/0xffffffff
-A POSTROUTING -d 10.1.2.5/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x37/0xffffffff
-A POSTROUTING -d 10.1.2.5/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x37/0xffffffff
-A POSTROUTING -d 10.1.2.6/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x38/0xffffffff
-A POSTROUTING -d 10.1.2.6/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x38/0xffffffff
-A POSTROUTING -d 10.1.2.7/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x39/0xffffffff
-A POSTROUTING -d 10.1.2.7/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x39/0xffffffff
-A POSTROUTING -d 10.1.2.8/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x3a/0xffffffff
-A POSTROUTING -d 10.1.2.8/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x3a/0xffffffff
-A POSTROUTING -d 10.1.2.9/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x3b/0xffffffff
-A POSTROUTING -d 10.1.2.9/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x3b/0xffffffff
-A POSTROUTING -d 10.1.2.10/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1fe/0xffffffff
-A POSTROUTING -d 10.1.2.10/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1fe/0xffffffff
-A POSTROUTING -d 10.1.2.11/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1ff/0xffffffff
-A POSTROUTING -d 10.1.2.11/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1ff/0xffffffff
-A POSTROUTING -d 10.1.2.12/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x200/0xffffffff
-A POSTROUTING -d 10.1.2.12/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x200/0xffffffff
-A POSTROUTING -d 10.1.2.13/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x201/0xffffffff
-A POSTROUTING -d 10.1.2.13/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x201/0xffffffff
-A POSTROUTING -d 10.1.2.14/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x202/0xffffffff
-A POSTROUTING -d 10.1.2.14/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x202/0xffffffff
-A POSTROUTING -d 10.1.2.15/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x203/0xffffffff
-A POSTROUTING -d 10.1.2.15/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x203/0xffffffff
-A POSTROUTING -d 10.1.2.16/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x204/0xffffffff
-A POSTROUTING -d 10.1.2.16/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x204/0xffffffff
-A POSTROUTING -d 10.1.2.17/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x205/0xffffffff
-A POSTROUTING -d 10.1.2.17/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x205/0xffffffff
-A POSTROUTING -d 10.1.2.18/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x206/0xffffffff
-A POSTROUTING -d 10.1.2.18/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x206/0xffffffff
-A POSTROUTING -d 10.1.2.19/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x207/0xffffffff
-A POSTROUTING -d 10.1.2.19/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x207/0xffffffff
-A POSTROUTING -d 10.1.2.20/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x208/0xffffffff
-A POSTROUTING -d 10.1.2.20/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x208/0xffffffff
-A POSTROUTING -d 10.1.2.21/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x209/0xffffffff
-A POSTROUTING -d 10.1.2.21/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x209/0xffffffff
-A POSTROUTING -d 10.1.2.22/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20a/0xffffffff
-A POSTROUTING -d 10.1.2.22/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20a/0xffffffff
-A POSTROUTING -d 10.1.2.23/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20b/0xffffffff
-A POSTROUTING -d 10.1.2.23/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20b/0xffffffff
-A POSTROUTING -d 10.1.2.24/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20c/0xffffffff
-A POSTROUTING -d 10.1.2.24/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20c/0xffffffff
-A POSTROUTING -d 10.1.2.25/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20d/0xffffffff
-A POSTROUTING -d 10.1.2.25/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20d/0xffffffff
-A POSTROUTING -d 10.1.2.26/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20e/0xffffffff
-A POSTROUTING -d 10.1.2.26/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20e/0xffffffff
-A POSTROUTING -d 10.1.2.27/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20f/0xffffffff
-A POSTROUTING -d 10.1.2.27/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x20f/0xffffffff
-A POSTROUTING -d 10.1.2.28/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x210/0xffffffff
-A POSTROUTING -d 10.1.2.28/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x210/0xffffffff
-A POSTROUTING -d 10.1.2.29/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x211/0xffffffff
-A POSTROUTING -d 10.1.2.29/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x211/0xffffffff
-A POSTROUTING -d 10.1.2.30/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x212/0xffffffff
-A POSTROUTING -d 10.1.2.30/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x212/0xffffffff
-A POSTROUTING -d 10.1.2.31/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x213/0xffffffff
-A POSTROUTING -d 10.1.2.31/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x213/0xffffffff
-A POSTROUTING -d 10.1.2.32/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x214/0xffffffff
-A POSTROUTING -d 10.1.2.32/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x214/0xffffffff
-A POSTROUTING -d 10.1.2.33/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x215/0xffffffff
-A POSTROUTING -d 10.1.2.33/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x215/0xffffffff
-A POSTROUTING -d 10.1.2.34/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x216/0xffffffff
-A POSTROUTING -d 10.1.2.34/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x216/0xffffffff
-A POSTROUTING -d 10.1.2.35/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x217/0xffffffff
-A POSTROUTING -d 10.1.2.35/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x217/0xffffffff
-A POSTROUTING -d 10.1.2.36/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x218/0xffffffff
-A POSTROUTING -d 10.1.2.36/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x218/0xffffffff
-A POSTROUTING -d 10.1.2.37/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x219/0xffffffff
-A POSTROUTING -d 10.1.2.37/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x219/0xffffffff
-A POSTROUTING -d 10.1.2.38/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21a/0xffffffff
-A POSTROUTING -d 10.1.2.38/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21a/0xffffffff
-A POSTROUTING -d 10.1.2.39/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21b/0xffffffff
-A POSTROUTING -d 10.1.2.39/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21b/0xffffffff
-A POSTROUTING -d 10.1.2.40/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21c/0xffffffff
-A POSTROUTING -d 10.1.2.40/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21c/0xffffffff
-A POSTROUTING -d 10.1.2.41/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21d/0xffffffff
-A POSTROUTING -d 10.1.2.41/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21d/0xffffffff
-A POSTROUTING -d 10.1.2.42/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21e/0xffffffff
-A POSTROUTING -d 10.1.2.42/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21e/0xffffffff
-A POSTROUTING -d 10.1.2.43/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21f/0xffffffff
-A POSTROUTING -d 10.1.2.43/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x21f/0xffffffff
-A POSTROUTING -d 10.1.2.44/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x220/0xffffffff
-A POSTROUTING -d 10.1.2.44/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x220/0xffffffff
-A POSTROUTING -d 10.1.2.45/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x221/0xffffffff
-A POSTROUTING -d 10.1.2.45/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x221/0xffffffff
-A POSTROUTING -d 10.1.2.46/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x222/0xffffffff
-A POSTROUTING -d 10.1.2.46/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x222/0xffffffff
-A POSTROUTING -d 10.1.2.47/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x223/0xffffffff
-A POSTROUTING -d 10.1.2.47/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x223/0xffffffff
-A POSTROUTING -d 10.1.2.48/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x224/0xffffffff
-A POSTROUTING -d 10.1.2.48/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x224/0xffffffff
-A POSTROUTING -d 10.1.2.49/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x225/0xffffffff
-A POSTROUTING -d 10.1.2.49/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x225/0xffffffff
-A POSTROUTING -d 10.1.2.50/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x226/0xffffffff
-A POSTROUTING -d 10.1.2.50/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x226/0xffffffff
-A POSTROUTING -d 10.1.2.51/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x227/0xffffffff
-A POSTROUTING -d 10.1.2.51/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x227/0xffffffff
-A POSTROUTING -d 10.1.2.52/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x228/0xffffffff
-A POSTROUTING -d 10.1.2.52/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x228/0xffffffff
-A POSTROUTING -d 10.1.2.53/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x229/0xffffffff
-A POSTROUTING -d 10.1.2.53/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x229/0xffffffff
-A POSTROUTING -d 10.1.2.54/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22a/0xffffffff
-A POSTROUTING -d 10.1.2.54/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22a/0xffffffff
-A POSTROUTING -d 10.1.2.55/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22b/0xffffffff
-A POSTROUTING -d 10.1.2.55/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22b/0xffffffff
-A POSTROUTING -d 10.1.2.56/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22c/0xffffffff
-A POSTROUTING -d 10.1.2.56/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22c/0xffffffff
-A POSTROUTING -d 10.1.2.57/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22d/0xffffffff
-A POSTROUTING -d 10.1.2.57/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22d/0xffffffff
-A POSTROUTING -d 10.1.2.58/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22e/0xffffffff
-A POSTROUTING -d 10.1.2.58/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22e/0xffffffff
-A POSTROUTING -d 10.1.2.59/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22f/0xffffffff
-A POSTROUTING -d 10.1.2.59/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x22f/0xffffffff
-A POSTROUTING -d 10.1.2.60/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x230/0xffffffff
-A POSTROUTING -d 10.1.2.60/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x230/0xffffffff
-A POSTROUTING -d 10.1.2.61/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x231/0xffffffff
-A POSTROUTING -d 10.1.2.61/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x231/0xffffffff
-A POSTROUTING -d 10.1.2.62/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x232/0xffffffff
-A POSTROUTING -d 10.1.2.62/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x232/0xffffffff
-A POSTROUTING -d 10.1.2.63/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x233/0xffffffff
-A POSTROUTING -d 10.1.2.63/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x233/0xffffffff
-A POSTROUTING -d 10.1.2.64/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x234/0xffffffff
-A POSTROUTING -d 10.1.2.64/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x234/0xffffffff
-A POSTROUTING -d 10.1.2.65/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x235/0xffffffff
-A POSTROUTING -d 10.1.2.65/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x235/0xffffffff
-A POSTROUTING -d 10.1.2.66/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x236/0xffffffff
-A POSTROUTING -d 10.1.2.66/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x236/0xffffffff
-A POSTROUTING -d 10.1.2.67/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x237/0xffffffff
-A POSTROUTING -d 10.1.2.67/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x237/0xffffffff
-A POSTROUTING -d 10.1.2.68/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x238/0xffffffff
-A POSTROUTING -d 10.1.2.68/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x238/0xffffffff
-A POSTROUTING -d 10.1.2.69/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x239/0xffffffff
-A POSTROUTING -d 10.1.2.69/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x239/0xffffffff
-A POSTROUTING -d 10.1.2.70/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23a/0xffffffff
-A POSTROUTING -d 10.1.2.70/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23a/0xffffffff
-A POSTROUTING -d 10.1.2.71/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23b/0xffffffff
-A POSTROUTING -d 10.1.2.71/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23b/0xffffffff
-A POSTROUTING -d 10.1.2.72/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23c/0xffffffff
-A POSTROUTING -d 10.1.2.72/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23c/0xffffffff
-A POSTROUTING -d 10.1.2.73/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23d/0xffffffff
-A POSTROUTING -d 10.1.2.73/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23d/0xffffffff
-A POSTROUTING -d 10.1.2.74/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23e/0xffffffff
-A POSTROUTING -d 10.1.2.74/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23e/0xffffffff
-A POSTROUTING -d 10.1.2.75/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23f/0xffffffff
-A POSTROUTING -d 10.1.2.75/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x23f/0xffffffff
-A POSTROUTING -d 10.1.2.76/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x240/0xffffffff
-A POSTROUTING -d 10.1.2.76/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x240/0xffffffff
-A POSTROUTING -d 10.1.2.77/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x241/0xffffffff
-A POSTROUTING -d 10.1.2.77/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x241/0xffffffff
-A POSTROUTING -d 10.1.2.78/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x242/0xffffffff
-A POSTROUTING -d 10.1.2.78/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x242/0xffffffff
-A POSTROUTING -d 10.1.2.79/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x243/0xffffffff
-A POSTROUTING -d 10.1.2.79/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x243/0xffffffff
-A POSTROUTING -d 10.1.2.80/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x244/0xffffffff
-A POSTROUTING -d 10.1.2.80/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x244/0xffffffff
-A POSTROUTING -d 10.1.2.81/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x245/0xffffffff
-A POSTROUTING -d 10.1.2.81/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x245/0xffffffff
-A POSTROUTING -d 10.1.2.82/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x246/0xffffffff
-A POSTROUTING -d 10.1.2.82/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x246/0xffffffff
-A POSTROUTING -d 10.1.2.83/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x247/0xffffffff
-A POSTROUTING -d 10.1.2.83/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x247/0xffffffff
-A POSTROUTING -d 10.1.2.84/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x248/0xffffffff
-A POSTROUTING -d 10.1.2.84/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x248/0xffffffff
-A POSTROUTING -d 10.1.2.85/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x249/0xffffffff
-A POSTROUTING -d 10.1.2.85/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x249/0xffffffff
-A POSTROUTING -d 10.1.2.86/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24a/0xffffffff
-A POSTROUTING -d 10.1.2.86/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24a/0xffffffff
-A POSTROUTING -d 10.1.2.87/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24b/0xffffffff
-A POSTROUTING -d 10.1.2.87/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24b/0xffffffff
-A POSTROUTING -d 10.1.2.88/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24c/0xffffffff
-A POSTROUTING -d 10.1.2.88/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24c/0xffffffff
-A POSTROUTING -d 10.1.2.89/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24d/0xffffffff
-A POSTROUTING -d 10.1.2.89/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24d/0xffffffff
-A POSTROUTING -d 10.1.2.90/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24e/0xffffffff
-A POSTROUTING -d 10.1.2.90/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24e/0xffffffff
-A POSTROUTING -d 10.1.2.91/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24f/0xffffffff
-A POSTROUTING -d 10.1.2.91/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x24f/0xffffffff
-A POSTROUTING -d 10.1.2.92/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x250/0xffffffff
-A POSTROUTING -d 10.1.2.92/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x250/0xffffffff
-A POSTROUTING -d 10.1.2.93/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x251/0xffffffff
-A POSTROUTING -d 10.1.2.93/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x251/0xffffffff
-A POSTROUTING -d 10.1.2.94/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x252/0xffffffff
-A POSTROUTING -d 10.1.2.94/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x252/0xffffffff
-A POSTROUTING -d 10.1.2.95/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x253/0xffffffff
-A POSTROUTING -d 10.1.2.95/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x253/0xffffffff
-A POSTROUTING -d 10.1.2.96/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x254/0xffffffff
-A POSTROUTING -d 10.1.2.96/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x254/0xffffffff
-A POSTROUTING -d 10.1.2.97/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x255/0xffffffff
-A POSTROUTING -d 10.1.2.97/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x255/0xffffffff
-A POSTROUTING -d 10.1.2.98/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x256/0xffffffff
-A POSTROUTING -d 10.1.2.98/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x256/0xffffffff
-A POSTROUTING -d 10.1.2.99/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x257/0xffffffff
-A POSTROUTING -d 10.1.2.99/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x257/0xffffffff
-A POSTROUTING -d 10.1.2.100/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13ec/0xffffffff
-A POSTROUTING -d 10.1.2.100/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13ec/0xffffffff
-A POSTROUTING -d 10.1.2.101/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13ed/0xffffffff
-A POSTROUTING -d 10.1.2.101/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13ed/0xffffffff
-A POSTROUTING -d 10.1.2.102/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13ee/0xffffffff
-A POSTROUTING -d 10.1.2.102/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13ee/0xffffffff
-A POSTROUTING -d 10.1.2.103/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13ef/0xffffffff
-A POSTROUTING -d 10.1.2.103/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13ef/0xffffffff
-A POSTROUTING -d 10.1.2.104/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f0/0xffffffff
-A POSTROUTING -d 10.1.2.104/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f0/0xffffffff
-A POSTROUTING -d 10.1.2.105/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f1/0xffffffff
-A POSTROUTING -d 10.1.2.105/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f1/0xffffffff
-A POSTROUTING -d 10.1.2.106/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f2/0xffffffff
-A POSTROUTING -d 10.1.2.106/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f2/0xffffffff
-A POSTROUTING -d 10.1.2.107/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f3/0xffffffff
-A POSTROUTING -d 10.1.2.107/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f3/0xffffffff
-A POSTROUTING -d 10.1.2.108/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f4/0xffffffff
-A POSTROUTING -d 10.1.2.108/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f4/0xffffffff
-A POSTROUTING -d 10.1.2.109/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f5/0xffffffff
-A POSTROUTING -d 10.1.2.109/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f5/0xffffffff
-A POSTROUTING -d 10.1.2.110/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f6/0xffffffff
-A POSTROUTING -d 10.1.2.110/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f6/0xffffffff
-A POSTROUTING -d 10.1.2.111/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f7/0xffffffff
-A POSTROUTING -d 10.1.2.111/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f7/0xffffffff
-A POSTROUTING -d 10.1.2.112/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f8/0xffffffff
-A POSTROUTING -d 10.1.2.112/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f8/0xffffffff
-A POSTROUTING -d 10.1.2.113/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f9/0xffffffff
-A POSTROUTING -d 10.1.2.113/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13f9/0xffffffff
-A POSTROUTING -d 10.1.2.114/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13fa/0xffffffff
-A POSTROUTING -d 10.1.2.114/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13fa/0xffffffff
-A POSTROUTING -d 10.1.2.115/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13fb/0xffffffff
-A POSTROUTING -d 10.1.2.115/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13fb/0xffffffff
-A POSTROUTING -d 10.1.2.116/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13fc/0xffffffff
-A POSTROUTING -d 10.1.2.116/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13fc/0xffffffff
-A POSTROUTING -d 10.1.2.117/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13fd/0xffffffff
-A POSTROUTING -d 10.1.2.117/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13fd/0xffffffff
-A POSTROUTING -d 10.1.2.118/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13fe/0xffffffff
-A POSTROUTING -d 10.1.2.118/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13fe/0xffffffff
-A POSTROUTING -d 10.1.2.119/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13ff/0xffffffff
-A POSTROUTING -d 10.1.2.119/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x13ff/0xffffffff
-A POSTROUTING -d 10.1.2.120/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1400/0xffffffff
-A POSTROUTING -d 10.1.2.120/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1400/0xffffffff
-A POSTROUTING -d 10.1.2.121/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1401/0xffffffff
-A POSTROUTING -d 10.1.2.121/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1401/0xffffffff
-A POSTROUTING -d 10.1.2.122/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1402/0xffffffff
-A POSTROUTING -d 10.1.2.122/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1402/0xffffffff
-A POSTROUTING -d 10.1.2.123/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1403/0xffffffff
-A POSTROUTING -d 10.1.2.123/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1403/0xffffffff
-A POSTROUTING -d 10.1.2.124/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1404/0xffffffff
-A POSTROUTING -d 10.1.2.124/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1404/0xffffffff
-A POSTROUTING -d 10.1.2.125/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1405/0xffffffff
-A POSTROUTING -d 10.1.2.125/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1405/0xffffffff
-A POSTROUTING -d 10.1.2.126/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1406/0xffffffff
-A POSTROUTING -d 10.1.2.126/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1406/0xffffffff
-A POSTROUTING -d 10.1.2.127/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1407/0xffffffff
-A POSTROUTING -d 10.1.2.127/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1407/0xffffffff
-A POSTROUTING -d 10.1.2.128/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1408/0xffffffff
-A POSTROUTING -d 10.1.2.128/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1408/0xffffffff
-A POSTROUTING -d 10.1.2.129/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1409/0xffffffff
-A POSTROUTING -d 10.1.2.129/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1409/0xffffffff
-A POSTROUTING -d 10.1.2.130/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140a/0xffffffff
-A POSTROUTING -d 10.1.2.130/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140a/0xffffffff
-A POSTROUTING -d 10.1.2.131/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140b/0xffffffff
-A POSTROUTING -d 10.1.2.131/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140b/0xffffffff
-A POSTROUTING -d 10.1.2.132/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140c/0xffffffff
-A POSTROUTING -d 10.1.2.132/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140c/0xffffffff
-A POSTROUTING -d 10.1.2.133/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140d/0xffffffff
-A POSTROUTING -d 10.1.2.133/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140d/0xffffffff
-A POSTROUTING -d 10.1.2.134/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140e/0xffffffff
-A POSTROUTING -d 10.1.2.134/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140e/0xffffffff
-A POSTROUTING -d 10.1.2.135/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140f/0xffffffff
-A POSTROUTING -d 10.1.2.135/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x140f/0xffffffff
-A POSTROUTING -d 10.1.2.136/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1410/0xffffffff
-A POSTROUTING -d 10.1.2.136/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1410/0xffffffff
-A POSTROUTING -d 10.1.2.137/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1411/0xffffffff
-A POSTROUTING -d 10.1.2.137/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1411/0xffffffff
-A POSTROUTING -d 10.1.2.138/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1412/0xffffffff
-A POSTROUTING -d 10.1.2.138/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1412/0xffffffff
-A POSTROUTING -d 10.1.2.139/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1413/0xffffffff
-A POSTROUTING -d 10.1.2.139/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1413/0xffffffff
-A POSTROUTING -d 10.1.2.140/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1414/0xffffffff
-A POSTROUTING -d 10.1.2.140/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1414/0xffffffff
-A POSTROUTING -d 10.1.2.141/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1415/0xffffffff
-A POSTROUTING -d 10.1.2.141/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1415/0xffffffff
-A POSTROUTING -d 10.1.2.142/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1416/0xffffffff
-A POSTROUTING -d 10.1.2.142/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1416/0xffffffff
-A POSTROUTING -d 10.1.2.143/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1417/0xffffffff
-A POSTROUTING -d 10.1.2.143/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1417/0xffffffff
-A POSTROUTING -d 10.1.2.144/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1418/0xffffffff
-A POSTROUTING -d 10.1.2.144/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1418/0xffffffff
-A POSTROUTING -d 10.1.2.145/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1419/0xffffffff
-A POSTROUTING -d 10.1.2.145/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1419/0xffffffff
-A POSTROUTING -d 10.1.2.146/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141a/0xffffffff
-A POSTROUTING -d 10.1.2.146/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141a/0xffffffff
-A POSTROUTING -d 10.1.2.147/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141b/0xffffffff
-A POSTROUTING -d 10.1.2.147/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141b/0xffffffff
-A POSTROUTING -d 10.1.2.148/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141c/0xffffffff
-A POSTROUTING -d 10.1.2.148/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141c/0xffffffff
-A POSTROUTING -d 10.1.2.149/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141d/0xffffffff
-A POSTROUTING -d 10.1.2.149/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141d/0xffffffff
-A POSTROUTING -d 10.1.2.150/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141e/0xffffffff
-A POSTROUTING -d 10.1.2.150/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141e/0xffffffff
-A POSTROUTING -d 10.1.2.151/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141f/0xffffffff
-A POSTROUTING -d 10.1.2.151/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x141f/0xffffffff
-A POSTROUTING -d 10.1.2.152/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1420/0xffffffff
-A POSTROUTING -d 10.1.2.152/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1420/0xffffffff
-A POSTROUTING -d 10.1.2.153/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1421/0xffffffff
-A POSTROUTING -d 10.1.2.153/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1421/0xffffffff
-A POSTROUTING -d 10.1.2.154/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1422/0xffffffff
-A POSTROUTING -d 10.1.2.154/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1422/0xffffffff
-A POSTROUTING -d 10.1.2.155/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1423/0xffffffff
-A POSTROUTING -d 10.1.2.155/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1423/0xffffffff
-A POSTROUTING -d 10.1.2.156/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1424/0xffffffff
-A POSTROUTING -d 10.1.2.156/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1424/0xffffffff
-A POSTROUTING -d 10.1.2.157/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1425/0xffffffff
-A POSTROUTING -d 10.1.2.157/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1425/0xffffffff
-A POSTROUTING -d 10.1.2.158/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1426/0xffffffff
-A POSTROUTING -d 10.1.2.158/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1426/0xffffffff
-A POSTROUTING -d 10.1.2.159/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1427/0xffffffff
-A POSTROUTING -d 10.1.2.159/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1427/0xffffffff
-A POSTROUTING -d 10.1.2.160/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1428/0xffffffff
-A POSTROUTING -d 10.1.2.160/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1428/0xffffffff
-A POSTROUTING -d 10.1.2.161/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1429/0xffffffff
-A POSTROUTING -d 10.1.2.161/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1429/0xffffffff
-A POSTROUTING -d 10.1.2.162/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142a/0xffffffff
-A POSTROUTING -d 10.1.2.162/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142a/0xffffffff
-A POSTROUTING -d 10.1.2.163/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142b/0xffffffff
-A POSTROUTING -d 10.1.2.163/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142b/0xffffffff
-A POSTROUTING -d 10.1.2.164/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142c/0xffffffff
-A POSTROUTING -d 10.1.2.164/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142c/0xffffffff
-A POSTROUTING -d 10.1.2.165/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142d/0xffffffff
-A POSTROUTING -d 10.1.2.165/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142d/0xffffffff
-A POSTROUTING -d 10.1.2.166/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142e/0xffffffff
-A POSTROUTING -d 10.1.2.166/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142e/0xffffffff
-A POSTROUTING -d 10.1.2.167/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142f/0xffffffff
-A POSTROUTING -d 10.1.2.167/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x142f/0xffffffff
-A POSTROUTING -d 10.1.2.168/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1430/0xffffffff
-A POSTROUTING -d 10.1.2.168/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1430/0xffffffff
-A POSTROUTING -d 10.1.2.169/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1431/0xffffffff
-A POSTROUTING -d 10.1.2.169/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1431/0xffffffff
-A POSTROUTING -d 10.1.2.170/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1432/0xffffffff
-A POSTROUTING -d 10.1.2.170/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1432/0xffffffff
-A POSTROUTING -d 10.1.2.171/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1433/0xffffffff
-A POSTROUTING -d 10.1.2.171/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1433/0xffffffff
-A POSTROUTING -d 10.1.2.172/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1434/0xffffffff
-A POSTROUTING -d 10.1.2.172/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1434/0xffffffff
-A POSTROUTING -d 10.1.2.173/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1435/0xffffffff
-A POSTROUTING -d 10.1.2.173/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1435/0xffffffff
-A POSTROUTING -d 10.1.2.174/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1436/0xffffffff
-A POSTROUTING -d 10.1.2.174/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1436/0xffffffff
-A POSTROUTING -d 10.1.2.175/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1437/0xffffffff
-A POSTROUTING -d 10.1.2.175/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1437/0xffffffff
-A POSTROUTING -d 10.1.2.176/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1438/0xffffffff
-A POSTROUTING -d 10.1.2.176/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1438/0xffffffff
-A POSTROUTING -d 10.1.2.177/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1439/0xffffffff
-A POSTROUTING -d 10.1.2.177/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1439/0xffffffff
-A POSTROUTING -d 10.1.2.178/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143a/0xffffffff
-A POSTROUTING -d 10.1.2.178/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143a/0xffffffff
-A POSTROUTING -d 10.1.2.179/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143b/0xffffffff
-A POSTROUTING -d 10.1.2.179/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143b/0xffffffff
-A POSTROUTING -d 10.1.2.180/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143c/0xffffffff
-A POSTROUTING -d 10.1.2.180/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143c/0xffffffff
-A POSTROUTING -d 10.1.2.181/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143d/0xffffffff
-A POSTROUTING -d 10.1.2.181/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143d/0xffffffff
-A POSTROUTING -d 10.1.2.182/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143e/0xffffffff
-A POSTROUTING -d 10.1.2.182/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143e/0xffffffff
-A POSTROUTING -d 10.1.2.183/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143f/0xffffffff
-A POSTROUTING -d 10.1.2.183/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x143f/0xffffffff
-A POSTROUTING -d 10.1.2.184/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1440/0xffffffff
-A POSTROUTING -d 10.1.2.184/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1440/0xffffffff
-A POSTROUTING -d 10.1.2.185/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1441/0xffffffff
-A POSTROUTING -d 10.1.2.185/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1441/0xffffffff
-A POSTROUTING -d 10.1.2.186/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1442/0xffffffff
-A POSTROUTING -d 10.1.2.186/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1442/0xffffffff
-A POSTROUTING -d 10.1.2.187/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1443/0xffffffff
-A POSTROUTING -d 10.1.2.187/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1443/0xffffffff
-A POSTROUTING -d 10.1.2.188/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1444/0xffffffff
-A POSTROUTING -d 10.1.2.188/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1444/0xffffffff
-A POSTROUTING -d 10.1.2.189/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1445/0xffffffff
-A POSTROUTING -d 10.1.2.189/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1445/0xffffffff
-A POSTROUTING -d 10.1.2.190/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1446/0xffffffff
-A POSTROUTING -d 10.1.2.190/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1446/0xffffffff
-A POSTROUTING -d 10.1.2.191/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1447/0xffffffff
-A POSTROUTING -d 10.1.2.191/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1447/0xffffffff
-A POSTROUTING -d 10.1.2.192/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1448/0xffffffff
-A POSTROUTING -d 10.1.2.192/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1448/0xffffffff
-A POSTROUTING -d 10.1.2.193/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1449/0xffffffff
-A POSTROUTING -d 10.1.2.193/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1449/0xffffffff
-A POSTROUTING -d 10.1.2.194/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144a/0xffffffff
-A POSTROUTING -d 10.1.2.194/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144a/0xffffffff
-A POSTROUTING -d 10.1.2.195/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144b/0xffffffff
-A POSTROUTING -d 10.1.2.195/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144b/0xffffffff
-A POSTROUTING -d 10.1.2.196/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144c/0xffffffff
-A POSTROUTING -d 10.1.2.196/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144c/0xffffffff
-A POSTROUTING -d 10.1.2.197/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144d/0xffffffff
-A POSTROUTING -d 10.1.2.197/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144d/0xffffffff
-A POSTROUTING -d 10.1.2.198/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144e/0xffffffff
-A POSTROUTING -d 10.1.2.198/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144e/0xffffffff
-A POSTROUTING -d 10.1.2.199/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144f/0xffffffff
-A POSTROUTING -d 10.1.2.199/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x144f/0xffffffff
-A POSTROUTING -d 10.1.2.200/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1450/0xffffffff
-A POSTROUTING -d 10.1.2.200/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1450/0xffffffff
-A POSTROUTING -d 10.1.2.201/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1451/0xffffffff
-A POSTROUTING -d 10.1.2.201/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1451/0xffffffff
-A POSTROUTING -d 10.1.2.202/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1452/0xffffffff
-A POSTROUTING -d 10.1.2.202/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1452/0xffffffff
-A POSTROUTING -d 10.1.2.203/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1453/0xffffffff
-A POSTROUTING -d 10.1.2.203/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1453/0xffffffff
-A POSTROUTING -d 10.1.2.204/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1454/0xffffffff
-A POSTROUTING -d 10.1.2.204/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1454/0xffffffff
-A POSTROUTING -d 10.1.2.205/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1455/0xffffffff
-A POSTROUTING -d 10.1.2.205/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1455/0xffffffff
-A POSTROUTING -d 10.1.2.206/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1456/0xffffffff
-A POSTROUTING -d 10.1.2.206/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1456/0xffffffff
-A POSTROUTING -d 10.1.2.207/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1457/0xffffffff
-A POSTROUTING -d 10.1.2.207/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1457/0xffffffff
-A POSTROUTING -d 10.1.2.208/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1458/0xffffffff
-A POSTROUTING -d 10.1.2.208/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1458/0xffffffff
-A POSTROUTING -d 10.1.2.209/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1459/0xffffffff
-A POSTROUTING -d 10.1.2.209/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1459/0xffffffff
-A POSTROUTING -d 10.1.2.210/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145a/0xffffffff
-A POSTROUTING -d 10.1.2.210/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145a/0xffffffff
-A POSTROUTING -d 10.1.2.211/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145b/0xffffffff
-A POSTROUTING -d 10.1.2.211/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145b/0xffffffff
-A POSTROUTING -d 10.1.2.212/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145c/0xffffffff
-A POSTROUTING -d 10.1.2.212/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145c/0xffffffff
-A POSTROUTING -d 10.1.2.213/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145d/0xffffffff
-A POSTROUTING -d 10.1.2.213/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145d/0xffffffff
-A POSTROUTING -d 10.1.2.214/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145e/0xffffffff
-A POSTROUTING -d 10.1.2.214/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145e/0xffffffff
-A POSTROUTING -d 10.1.2.215/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145f/0xffffffff
-A POSTROUTING -d 10.1.2.215/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x145f/0xffffffff
-A POSTROUTING -d 10.1.2.216/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1460/0xffffffff
-A POSTROUTING -d 10.1.2.216/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1460/0xffffffff
-A POSTROUTING -d 10.1.2.217/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1461/0xffffffff
-A POSTROUTING -d 10.1.2.217/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1461/0xffffffff
-A POSTROUTING -d 10.1.2.218/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1462/0xffffffff
-A POSTROUTING -d 10.1.2.218/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1462/0xffffffff
-A POSTROUTING -d 10.1.2.219/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1463/0xffffffff
-A POSTROUTING -d 10.1.2.219/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1463/0xffffffff
-A POSTROUTING -d 10.1.2.220/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1464/0xffffffff
-A POSTROUTING -d 10.1.2.220/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1464/0xffffffff
-A POSTROUTING -d 10.1.2.221/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1465/0xffffffff
-A POSTROUTING -d 10.1.2.221/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1465/0xffffffff
-A POSTROUTING -d 10.1.2.222/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1466/0xffffffff
-A POSTROUTING -d 10.1.2.222/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1466/0xffffffff
-A POSTROUTING -d 10.1.2.223/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1467/0xffffffff
-A POSTROUTING -d 10.1.2.223/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1467/0xffffffff
-A POSTROUTING -d 10.1.2.224/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1468/0xffffffff
-A POSTROUTING -d 10.1.2.224/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1468/0xffffffff
-A POSTROUTING -d 10.1.2.225/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1469/0xffffffff
-A POSTROUTING -d 10.1.2.225/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1469/0xffffffff
-A POSTROUTING -d 10.1.2.226/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146a/0xffffffff
-A POSTROUTING -d 10.1.2.226/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146a/0xffffffff
-A POSTROUTING -d 10.1.2.227/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146b/0xffffffff
-A POSTROUTING -d 10.1.2.227/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146b/0xffffffff
-A POSTROUTING -d 10.1.2.228/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146c/0xffffffff
-A POSTROUTING -d 10.1.2.228/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146c/0xffffffff
-A POSTROUTING -d 10.1.2.229/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146d/0xffffffff
-A POSTROUTING -d 10.1.2.229/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146d/0xffffffff
-A POSTROUTING -d 10.1.2.230/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146e/0xffffffff
-A POSTROUTING -d 10.1.2.230/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146e/0xffffffff
-A POSTROUTING -d 10.1.2.231/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146f/0xffffffff
-A POSTROUTING -d 10.1.2.231/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x146f/0xffffffff
-A POSTROUTING -d 10.1.2.232/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1470/0xffffffff
-A POSTROUTING -d 10.1.2.232/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1470/0xffffffff
-A POSTROUTING -d 10.1.2.233/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1471/0xffffffff
-A POSTROUTING -d 10.1.2.233/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1471/0xffffffff
-A POSTROUTING -d 10.1.2.234/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1472/0xffffffff
-A POSTROUTING -d 10.1.2.234/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1472/0xffffffff
-A POSTROUTING -d 10.1.2.235/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1473/0xffffffff
-A POSTROUTING -d 10.1.2.235/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1473/0xffffffff
-A POSTROUTING -d 10.1.2.236/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1474/0xffffffff
-A POSTROUTING -d 10.1.2.236/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1474/0xffffffff
-A POSTROUTING -d 10.1.2.237/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1475/0xffffffff
-A POSTROUTING -d 10.1.2.237/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1475/0xffffffff
-A POSTROUTING -d 10.1.2.238/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1476/0xffffffff
-A POSTROUTING -d 10.1.2.238/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1476/0xffffffff
-A POSTROUTING -d 10.1.2.239/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1477/0xffffffff
-A POSTROUTING -d 10.1.2.239/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1477/0xffffffff
-A POSTROUTING -d 10.1.2.240/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1478/0xffffffff
-A POSTROUTING -d 10.1.2.240/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1478/0xffffffff
-A POSTROUTING -d 10.1.2.241/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1479/0xffffffff
-A POSTROUTING -d 10.1.2.241/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1479/0xffffffff
-A POSTROUTING -d 10.1.2.242/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147a/0xffffffff
-A POSTROUTING -d 10.1.2.242/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147a/0xffffffff
-A POSTROUTING -d 10.1.2.243/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147b/0xffffffff
-A POSTROUTING -d 10.1.2.243/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147b/0xffffffff
-A POSTROUTING -d 10.1.2.244/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147c/0xffffffff
-A POSTROUTING -d 10.1.2.244/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147c/0xffffffff
-A POSTROUTING -d 10.1.2.245/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147d/0xffffffff
-A POSTROUTING -d 10.1.2.245/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147d/0xffffffff
-A POSTROUTING -d 10.1.2.246/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147e/0xffffffff
-A POSTROUTING -d 10.1.2.246/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147e/0xffffffff
-A POSTROUTING -d 10.1.2.247/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147f/0xffffffff
-A POSTROUTING -d 10.1.2.247/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x147f/0xffffffff
-A POSTROUTING -d 10.1.2.248/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1480/0xffffffff
-A POSTROUTING -d 10.1.2.248/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1480/0xffffffff
-A POSTROUTING -d 10.1.2.249/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1481/0xffffffff
-A POSTROUTING -d 10.1.2.249/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1481/0xffffffff
-A POSTROUTING -d 10.1.2.250/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1482/0xffffffff
-A POSTROUTING -d 10.1.2.250/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1482/0xffffffff
-A POSTROUTING -d 10.1.2.251/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1483/0xffffffff
-A POSTROUTING -d 10.1.2.251/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1483/0xffffffff
-A POSTROUTING -d 10.1.2.252/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1484/0xffffffff
-A POSTROUTING -d 10.1.2.252/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1484/0xffffffff
-A POSTROUTING -d 10.1.2.253/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1485/0xffffffff
-A POSTROUTING -d 10.1.2.253/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1485/0xffffffff
-A POSTROUTING -d 10.1.2.254/32 -p tcp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1486/0xffffffff
-A POSTROUTING -d 10.1.2.254/32 -p udp -m multiport ! --sports 49152:65534 -j MARK --set-xmark 0x1486/0xffffffff
-A POSTROUTING -d 10.1.2.0/24 -p tcp -m multiport --sports 49152:65534 -j MARK --set-xmark 0x5/0xffffffff
-A POSTROUTING -d 10.1.2.0/24 -p udp -m multiport --sports 49152:65534 -j MARK --set-xmark 0x5/0xffffffff
COMMIT
# Completed on Wed Nov 18 12:35:56 2015
# Generated by iptables-save v1.4.21 on Wed Nov 18 12:35:56 2015
*raw
:PREROUTING ACCEPT [1292:475584]
:OUTPUT ACCEPT [289:33888]
COMMIT
# Completed on Wed Nov 18 12:35:56 2015
# Generated by iptables-save v1.4.21 on Wed Nov 18 12:35:56 2015
*nat
:PREROUTING ACCEPT [40:3876]
:INPUT ACCEPT [11:670]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 94.153.193.173/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.1.2.7:8765
-A PREROUTING -d 94.153.193.173/32 -p udp -m udp --dport 80 -j DNAT --to-destination 10.1.2.7:8765
-A PREROUTING -d 176.105.102.82/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.1.2.7:8765
-A PREROUTING -d 176.105.102.82/32 -p udp -m udp --dport 80 -j DNAT --to-destination 10.1.2.7:8765
-A PREROUTING -d 94.153.193.173/32 -p tcp -m tcp --dport 82 -j DNAT --to-destination 10.1.2.13:80
-A PREROUTING -d 94.153.193.173/32 -p udp -m udp --dport 82 -j DNAT --to-destination 10.1.2.13:80
-A PREROUTING -d 176.105.102.82/32 -p tcp -m tcp --dport 82 -j DNAT --to-destination 10.1.2.13:80
-A PREROUTING -d 176.105.102.82/32 -p udp -m udp --dport 82 -j DNAT --to-destination 10.1.2.13:80
-A PREROUTING -d 94.153.193.173/32 -p tcp -m tcp --dport 3389 -j DNAT --to-destination 10.1.2.129
-A PREROUTING -d 94.153.193.173/32 -p udp -m udp --dport 3389 -j DNAT --to-destination 10.1.2.129
-A PREROUTING -d 176.105.102.82/32 -p tcp -m tcp --dport 3389 -j DNAT --to-destination 10.1.2.129
-A PREROUTING -d 176.105.102.82/32 -p udp -m udp --dport 3389 -j DNAT --to-destination 10.1.2.129
-A PREROUTING -d 94.153.193.173/32 -p tcp -m tcp --dport 1234 -j DNAT --to-destination 10.1.2.109:3389
-A PREROUTING -d 94.153.193.173/32 -p udp -m udp --dport 1234 -j DNAT --to-destination 10.1.2.109:3389
-A PREROUTING -d 176.105.102.82/32 -p tcp -m tcp --dport 1234 -j DNAT --to-destination 10.1.2.109:3389
-A PREROUTING -d 176.105.102.82/32 -p udp -m udp --dport 1234 -j DNAT --to-destination 10.1.2.109:3389
-A PREROUTING -d 94.153.193.173/32 -p tcp -m tcp --dport 1212 -j DNAT --to-destination 10.1.2.156:3389
-A PREROUTING -d 94.153.193.173/32 -p udp -m udp --dport 1212 -j DNAT --to-destination 10.1.2.156:3389
-A PREROUTING -d 176.105.102.82/32 -p tcp -m tcp --dport 1212 -j DNAT --to-destination 10.1.2.156:3389
-A PREROUTING -d 176.105.102.82/32 -p udp -m udp --dport 1212 -j DNAT --to-destination 10.1.2.156:3389
-A POSTROUTING -s 10.1.2.0/24 -d 10.2.2.0/27 -j MASQUERADE
-A POSTROUTING -s 10.1.2.0/24 -d 192.168.0.0/24 -j MASQUERADE
-A POSTROUTING -s 10.1.2.0/24 -d 176.105.102.80/29 -j MASQUERADE
-A POSTROUTING -s 10.1.2.0/24 -p tcp -m multiport --dports 49152:65534 -j SNAT --to-source 176.105.102.82
-A POSTROUTING -s 10.1.2.0/24 -p udp -m multiport --dports 49152:65534 -j SNAT --to-source 176.105.102.82
-A POSTROUTING -s 10.1.2.0/24 -j SNAT --to-source 94.153.193.173
COMMIT
# Completed on Wed Nov 18 12:35:56 2015
# Generated by iptables-save v1.4.21 on Wed Nov 18 12:35:56 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1:152]
:fail2ban-ssh - [0:0]
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i em1 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i em2 -p tcp -m multiport --dports 8900:9100 -j DROP
-A INPUT -i em2 -p udp -m multiport --dports 8900:9100 -j DROP
-A INPUT -i eth1 -p tcp -m multiport --dports 8900:9100 -j DROP
-A INPUT -i eth1 -p udp -m multiport --dports 8900:9100 -j DROP
-A INPUT -i em2 -p tcp -j ACCEPT
-A INPUT -i em2 -p udp -j ACCEPT
-A INPUT -i eth1 -p tcp -j ACCEPT
-A INPUT -i eth1 -p udp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -m udp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -m udp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 82 -j ACCEPT
-A INPUT -p udp -m udp --dport 82 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 82 -j ACCEPT
-A INPUT -p udp -m udp --dport 82 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3389 -j ACCEPT
-A INPUT -p udp -m udp --dport 3389 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3389 -j ACCEPT
-A INPUT -p udp -m udp --dport 3389 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1234 -j ACCEPT
-A INPUT -p udp -m udp --dport 1234 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1234 -j ACCEPT
-A INPUT -p udp -m udp --dport 1234 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1212 -j ACCEPT
-A INPUT -p udp -m udp --dport 1212 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1212 -j ACCEPT
-A INPUT -p udp -m udp --dport 1212 -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT
-A INPUT -p udp -m udp --dport 1723 -j ACCEPT
-A INPUT -i ppp+ -j ACCEPT
-A FORWARD -d 10.1.2.156/32 -i eth1 -o em1 -p udp -m udp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.156/32 -i eth1 -o em1 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.156/32 -i em2 -o em1 -p udp -m udp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.156/32 -i em2 -o em1 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.109/32 -i eth1 -o em1 -p udp -m udp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.109/32 -i eth1 -o em1 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.109/32 -i em2 -o em1 -p udp -m udp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.109/32 -i em2 -o em1 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.129/32 -i eth1 -o em1 -p udp -m udp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.129/32 -i eth1 -o em1 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.129/32 -i em2 -o em1 -p udp -m udp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.129/32 -i em2 -o em1 -p tcp -m tcp --dport 3389 -j ACCEPT
-A FORWARD -d 10.1.2.13/32 -i eth1 -o em1 -p udp -m udp --dport 80 -j ACCEPT
-A FORWARD -d 10.1.2.13/32 -i eth1 -o em1 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 10.1.2.13/32 -i em2 -o em1 -p udp -m udp --dport 80 -j ACCEPT
-A FORWARD -d 10.1.2.13/32 -i em2 -o em1 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 10.1.2.7/32 -i eth1 -o em1 -p udp -m udp --dport 8765 -j ACCEPT
-A FORWARD -d 10.1.2.7/32 -i eth1 -o em1 -p tcp -m tcp --dport 8765 -j ACCEPT
-A FORWARD -d 10.1.2.7/32 -i em2 -o em1 -p udp -m udp --dport 8765 -j ACCEPT
-A FORWARD -d 10.1.2.7/32 -i em2 -o em1 -p tcp -m tcp --dport 8765 -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lo -o lo -j ACCEPT
-A FORWARD -i em1 -o em1 -j ACCEPT
-A FORWARD -d 192.168.0.0/24 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -j ACCEPT
-A FORWARD -i ppp+ -j ACCEPT
-A FORWARD -o ppp+ -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -s 10.1.2.2/32 -j ACCEPT
-A FORWARD -s 10.1.2.3/32 -j ACCEPT
-A FORWARD -s 10.1.2.4/32 -j ACCEPT
-A FORWARD -s 10.1.2.5/32 -j ACCEPT
-A FORWARD -s 10.1.2.6/32 -j ACCEPT
-A FORWARD -s 10.1.2.7/32 -j ACCEPT
-A FORWARD -s 10.1.2.8/32 -j ACCEPT
-A FORWARD -s 10.1.2.9/32 -j ACCEPT
-A FORWARD -s 10.1.2.10/32 -j ACCEPT
-A FORWARD -s 10.1.2.11/32 -j ACCEPT
-A FORWARD -s 10.1.2.12/32 -j ACCEPT
-A FORWARD -s 10.1.2.13/32 -j ACCEPT
-A FORWARD -s 10.1.2.14/32 -j ACCEPT
-A FORWARD -s 10.1.2.15/32 -j ACCEPT
-A FORWARD -s 10.1.2.16/32 -j ACCEPT
-A FORWARD -s 10.1.2.17/32 -j ACCEPT
-A FORWARD -s 10.1.2.18/32 -j ACCEPT
-A FORWARD -s 10.1.2.19/32 -j ACCEPT
-A FORWARD -s 10.1.2.20/32 -j ACCEPT
-A FORWARD -s 10.1.2.21/32 -j ACCEPT
-A FORWARD -s 10.1.2.22/32 -j ACCEPT
-A FORWARD -s 10.1.2.23/32 -j ACCEPT
-A FORWARD -s 10.1.2.24/32 -j ACCEPT
-A FORWARD -s 10.1.2.25/32 -j ACCEPT
-A FORWARD -s 10.1.2.26/32 -j ACCEPT
-A FORWARD -s 10.1.2.27/32 -j ACCEPT
-A FORWARD -s 10.1.2.28/32 -j ACCEPT
-A FORWARD -s 10.1.2.29/32 -j ACCEPT
-A FORWARD -s 10.1.2.30/32 -j ACCEPT
-A FORWARD -s 10.1.2.31/32 -j ACCEPT
-A FORWARD -s 10.1.2.32/32 -j ACCEPT
-A FORWARD -s 10.1.2.33/32 -j ACCEPT
-A FORWARD -s 10.1.2.34/32 -j ACCEPT
-A FORWARD -s 10.1.2.35/32 -j ACCEPT
-A FORWARD -s 10.1.2.36/32 -j ACCEPT
-A FORWARD -s 10.1.2.37/32 -j ACCEPT
-A FORWARD -s 10.1.2.38/32 -j ACCEPT
-A FORWARD -s 10.1.2.39/32 -j ACCEPT
-A FORWARD -s 10.1.2.40/32 -j ACCEPT
-A FORWARD -s 10.1.2.41/32 -j ACCEPT
-A FORWARD -s 10.1.2.42/32 -j ACCEPT
-A FORWARD -s 10.1.2.43/32 -j ACCEPT
-A FORWARD -s 10.1.2.44/32 -j ACCEPT
-A FORWARD -s 10.1.2.45/32 -j ACCEPT
-A FORWARD -s 10.1.2.46/32 -j ACCEPT
-A FORWARD -s 10.1.2.47/32 -j ACCEPT
-A FORWARD -s 10.1.2.48/32 -j ACCEPT
-A FORWARD -s 10.1.2.49/32 -j ACCEPT
-A FORWARD -s 10.1.2.50/32 -j ACCEPT
-A FORWARD -s 10.1.2.51/32 -j ACCEPT
-A FORWARD -s 10.1.2.52/32 -j ACCEPT
-A FORWARD -s 10.1.2.53/32 -j ACCEPT
-A FORWARD -s 10.1.2.54/32 -j ACCEPT
-A FORWARD -s 10.1.2.55/32 -j ACCEPT
-A FORWARD -s 10.1.2.56/32 -j ACCEPT
-A FORWARD -s 10.1.2.57/32 -j ACCEPT
-A FORWARD -s 10.1.2.58/32 -j ACCEPT
-A FORWARD -s 10.1.2.59/32 -j ACCEPT
-A FORWARD -s 10.1.2.60/32 -j ACCEPT
-A FORWARD -s 10.1.2.61/32 -j ACCEPT
-A FORWARD -s 10.1.2.62/32 -j ACCEPT
-A FORWARD -s 10.1.2.63/32 -j ACCEPT
-A FORWARD -s 10.1.2.64/32 -j ACCEPT
-A FORWARD -s 10.1.2.65/32 -j ACCEPT
-A FORWARD -s 10.1.2.66/32 -j ACCEPT
-A FORWARD -s 10.1.2.67/32 -j ACCEPT
-A FORWARD -s 10.1.2.68/32 -j ACCEPT
-A FORWARD -s 10.1.2.69/32 -j ACCEPT
-A FORWARD -s 10.1.2.70/32 -j ACCEPT
-A FORWARD -s 10.1.2.71/32 -j ACCEPT
-A FORWARD -s 10.1.2.72/32 -j ACCEPT
-A FORWARD -s 10.1.2.73/32 -j ACCEPT
-A FORWARD -s 10.1.2.74/32 -j ACCEPT
-A FORWARD -s 10.1.2.75/32 -j ACCEPT
-A FORWARD -s 10.1.2.76/32 -j ACCEPT
-A FORWARD -s 10.1.2.77/32 -j ACCEPT
-A FORWARD -s 10.1.2.78/32 -j ACCEPT
-A FORWARD -s 10.1.2.79/32 -j ACCEPT
-A FORWARD -s 10.1.2.80/32 -j ACCEPT
-A FORWARD -s 10.1.2.81/32 -j ACCEPT
-A FORWARD -s 10.1.2.82/32 -j ACCEPT
-A FORWARD -s 10.1.2.83/32 -j ACCEPT
-A FORWARD -s 10.1.2.84/32 -j ACCEPT
-A FORWARD -s 10.1.2.85/32 -j ACCEPT
-A FORWARD -s 10.1.2.86/32 -j ACCEPT
-A FORWARD -s 10.1.2.87/32 -j ACCEPT
-A FORWARD -s 10.1.2.88/32 -j ACCEPT
-A FORWARD -s 10.1.2.89/32 -j ACCEPT
-A FORWARD -s 10.1.2.90/32 -j ACCEPT
-A FORWARD -s 10.1.2.91/32 -j ACCEPT
-A FORWARD -s 10.1.2.92/32 -j ACCEPT
-A FORWARD -s 10.1.2.93/32 -j ACCEPT
-A FORWARD -s 10.1.2.94/32 -j ACCEPT
-A FORWARD -s 10.1.2.95/32 -j ACCEPT
-A FORWARD -s 10.1.2.96/32 -j ACCEPT
-A FORWARD -s 10.1.2.97/32 -j ACCEPT
-A FORWARD -s 10.1.2.98/32 -j ACCEPT
-A FORWARD -s 10.1.2.99/32 -j ACCEPT
-A FORWARD -s 10.1.2.100/32 -j ACCEPT
-A FORWARD -s 10.1.2.101/32 -j ACCEPT
-A FORWARD -s 10.1.2.102/32 -j ACCEPT
-A FORWARD -s 10.1.2.103/32 -j ACCEPT
-A FORWARD -s 10.1.2.104/32 -j ACCEPT
-A FORWARD -s 10.1.2.105/32 -j ACCEPT
-A FORWARD -s 10.1.2.106/32 -j ACCEPT
-A FORWARD -s 10.1.2.107/32 -j ACCEPT
-A FORWARD -s 10.1.2.108/32 -j ACCEPT
-A FORWARD -s 10.1.2.109/32 -j ACCEPT
-A FORWARD -s 10.1.2.110/32 -j ACCEPT
-A FORWARD -s 10.1.2.111/32 -j ACCEPT
-A FORWARD -s 10.1.2.112/32 -j ACCEPT
-A FORWARD -s 10.1.2.113/32 -j ACCEPT
-A FORWARD -s 10.1.2.114/32 -j ACCEPT
-A FORWARD -s 10.1.2.115/32 -j ACCEPT
-A FORWARD -s 10.1.2.116/32 -j ACCEPT
-A FORWARD -s 10.1.2.117/32 -j ACCEPT
-A FORWARD -s 10.1.2.118/32 -j ACCEPT
-A FORWARD -s 10.1.2.119/32 -j ACCEPT
-A FORWARD -s 10.1.2.120/32 -j ACCEPT
-A FORWARD -s 10.1.2.121/32 -j ACCEPT
-A FORWARD -s 10.1.2.122/32 -j ACCEPT
-A FORWARD -s 10.1.2.123/32 -j ACCEPT
-A FORWARD -s 10.1.2.124/32 -j ACCEPT
-A FORWARD -s 10.1.2.125/32 -j ACCEPT
-A FORWARD -s 10.1.2.126/32 -j ACCEPT
-A FORWARD -s 10.1.2.127/32 -j ACCEPT
-A FORWARD -s 10.1.2.128/32 -j ACCEPT
-A FORWARD -s 10.1.2.129/32 -j ACCEPT
-A FORWARD -s 10.1.2.130/32 -j ACCEPT
-A FORWARD -s 10.1.2.131/32 -j ACCEPT
-A FORWARD -s 10.1.2.132/32 -j ACCEPT
-A FORWARD -s 10.1.2.133/32 -j ACCEPT
-A FORWARD -s 10.1.2.134/32 -j ACCEPT
-A FORWARD -s 10.1.2.135/32 -j ACCEPT
-A FORWARD -s 10.1.2.136/32 -j ACCEPT
-A FORWARD -s 10.1.2.137/32 -j ACCEPT
-A FORWARD -s 10.1.2.138/32 -j ACCEPT
-A FORWARD -s 10.1.2.139/32 -j ACCEPT
-A FORWARD -s 10.1.2.140/32 -j ACCEPT
-A FORWARD -s 10.1.2.141/32 -j ACCEPT
-A FORWARD -s 10.1.2.142/32 -j ACCEPT
-A FORWARD -s 10.1.2.143/32 -j ACCEPT
-A FORWARD -s 10.1.2.144/32 -j ACCEPT
-A FORWARD -s 10.1.2.145/32 -j ACCEPT
-A FORWARD -s 10.1.2.146/32 -j ACCEPT
-A FORWARD -s 10.1.2.147/32 -j ACCEPT
-A FORWARD -s 10.1.2.148/32 -j ACCEPT
-A FORWARD -s 10.1.2.149/32 -j ACCEPT
-A FORWARD -s 10.1.2.150/32 -j ACCEPT
-A FORWARD -s 10.1.2.151/32 -j ACCEPT
-A FORWARD -s 10.1.2.152/32 -j ACCEPT
-A FORWARD -s 10.1.2.153/32 -j ACCEPT
-A FORWARD -s 10.1.2.154/32 -j ACCEPT
-A FORWARD -s 10.1.2.155/32 -j ACCEPT
-A FORWARD -s 10.1.2.156/32 -j ACCEPT
-A FORWARD -s 10.1.2.157/32 -j ACCEPT
-A FORWARD -s 10.1.2.158/32 -j ACCEPT
-A FORWARD -s 10.1.2.159/32 -j ACCEPT
-A FORWARD -s 10.1.2.160/32 -j ACCEPT
-A FORWARD -s 10.1.2.161/32 -j ACCEPT
-A FORWARD -s 10.1.2.162/32 -j ACCEPT
-A FORWARD -s 10.1.2.163/32 -j ACCEPT
-A FORWARD -s 10.1.2.164/32 -j ACCEPT
-A FORWARD -s 10.1.2.165/32 -j ACCEPT
-A FORWARD -s 10.1.2.166/32 -j ACCEPT
-A FORWARD -s 10.1.2.167/32 -j ACCEPT
-A FORWARD -s 10.1.2.168/32 -j ACCEPT
-A FORWARD -s 10.1.2.169/32 -j ACCEPT
-A FORWARD -s 10.1.2.170/32 -j ACCEPT
-A FORWARD -s 10.1.2.171/32 -j ACCEPT
-A FORWARD -s 10.1.2.172/32 -j ACCEPT
-A FORWARD -s 10.1.2.173/32 -j ACCEPT
-A FORWARD -s 10.1.2.174/32 -j ACCEPT
-A FORWARD -s 10.1.2.175/32 -j ACCEPT
-A FORWARD -s 10.1.2.176/32 -j ACCEPT
-A FORWARD -s 10.1.2.177/32 -j ACCEPT
-A FORWARD -s 10.1.2.178/32 -j ACCEPT
-A FORWARD -s 10.1.2.179/32 -j ACCEPT
-A FORWARD -s 10.1.2.180/32 -j ACCEPT
-A FORWARD -s 10.1.2.181/32 -j ACCEPT
-A FORWARD -s 10.1.2.182/32 -j ACCEPT
-A FORWARD -s 10.1.2.183/32 -j ACCEPT
-A FORWARD -s 10.1.2.184/32 -j ACCEPT
-A FORWARD -s 10.1.2.185/32 -j ACCEPT
-A FORWARD -s 10.1.2.186/32 -j ACCEPT
-A FORWARD -s 10.1.2.187/32 -j ACCEPT
-A FORWARD -s 10.1.2.188/32 -j ACCEPT
-A FORWARD -s 10.1.2.189/32 -j ACCEPT
-A FORWARD -s 10.1.2.190/32 -j ACCEPT
-A FORWARD -s 10.1.2.191/32 -j ACCEPT
-A FORWARD -s 10.1.2.192/32 -j ACCEPT
-A FORWARD -s 10.1.2.193/32 -j ACCEPT
-A FORWARD -s 10.1.2.194/32 -j ACCEPT
-A FORWARD -s 10.1.2.195/32 -j ACCEPT
-A FORWARD -s 10.1.2.196/32 -j ACCEPT
-A FORWARD -s 10.1.2.197/32 -j ACCEPT
-A FORWARD -s 10.1.2.198/32 -j ACCEPT
-A FORWARD -s 10.1.2.199/32 -j ACCEPT
-A FORWARD -s 10.1.2.200/32 -j ACCEPT
-A FORWARD -s 10.1.2.201/32 -j ACCEPT
-A FORWARD -s 10.1.2.202/32 -j ACCEPT
-A FORWARD -s 10.1.2.203/32 -j ACCEPT
-A FORWARD -s 10.1.2.204/32 -j ACCEPT
-A FORWARD -s 10.1.2.205/32 -j ACCEPT
-A FORWARD -s 10.1.2.206/32 -j ACCEPT
-A FORWARD -s 10.1.2.207/32 -j ACCEPT
-A FORWARD -s 10.1.2.208/32 -j ACCEPT
-A FORWARD -s 10.1.2.209/32 -j ACCEPT
-A FORWARD -s 10.1.2.210/32 -j ACCEPT
-A FORWARD -s 10.1.2.211/32 -j ACCEPT
-A FORWARD -s 10.1.2.212/32 -j ACCEPT
-A FORWARD -s 10.1.2.213/32 -j ACCEPT
-A FORWARD -s 10.1.2.214/32 -j ACCEPT
-A FORWARD -s 10.1.2.215/32 -j ACCEPT
-A FORWARD -s 10.1.2.216/32 -j ACCEPT
-A FORWARD -s 10.1.2.217/32 -j ACCEPT
-A FORWARD -s 10.1.2.218/32 -j ACCEPT
-A FORWARD -s 10.1.2.219/32 -j ACCEPT
-A FORWARD -s 10.1.2.220/32 -j ACCEPT
-A FORWARD -s 10.1.2.221/32 -j ACCEPT
-A FORWARD -s 10.1.2.222/32 -j ACCEPT
-A FORWARD -s 10.1.2.223/32 -j ACCEPT
-A FORWARD -s 10.1.2.224/32 -j ACCEPT
-A FORWARD -s 10.1.2.225/32 -j ACCEPT
-A FORWARD -s 10.1.2.226/32 -j ACCEPT
-A FORWARD -s 10.1.2.227/32 -j ACCEPT
-A FORWARD -s 10.1.2.228/32 -j ACCEPT
-A FORWARD -s 10.1.2.229/32 -j ACCEPT
-A FORWARD -s 10.1.2.230/32 -j ACCEPT
-A FORWARD -s 10.1.2.231/32 -j ACCEPT
-A FORWARD -s 10.1.2.232/32 -j ACCEPT
-A FORWARD -s 10.1.2.233/32 -j ACCEPT
-A FORWARD -s 10.1.2.234/32 -j ACCEPT
-A FORWARD -s 10.1.2.235/32 -j ACCEPT
-A FORWARD -s 10.1.2.236/32 -j ACCEPT
-A FORWARD -s 10.1.2.237/32 -j ACCEPT
-A FORWARD -s 10.1.2.238/32 -j ACCEPT
-A FORWARD -s 10.1.2.239/32 -j ACCEPT
-A FORWARD -s 10.1.2.240/32 -j ACCEPT
-A FORWARD -s 10.1.2.241/32 -j ACCEPT
-A FORWARD -s 10.1.2.242/32 -j ACCEPT
-A FORWARD -s 10.1.2.243/32 -j ACCEPT
-A FORWARD -s 10.1.2.244/32 -j ACCEPT
-A FORWARD -s 10.1.2.245/32 -j ACCEPT
-A FORWARD -s 10.1.2.246/32 -j ACCEPT
-A FORWARD -s 10.1.2.247/32 -j ACCEPT
-A FORWARD -s 10.1.2.248/32 -j ACCEPT
-A FORWARD -s 10.1.2.249/32 -j ACCEPT
-A FORWARD -s 10.1.2.250/32 -j ACCEPT
-A FORWARD -s 10.1.2.251/32 -j ACCEPT
-A FORWARD -s 10.1.2.252/32 -j ACCEPT
-A FORWARD -s 10.1.2.253/32 -j ACCEPT
-A FORWARD -s 10.1.2.254/32 -j ACCEPT
-A FORWARD -s 10.1.2.0/24 -j DROP
-A OUTPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A OUTPUT -p icmp -j ACCEPT
COMMIT
# Completed on Wed Nov 18 12:35:56 2015
